--- a/styling/home-design.css
+++ b/styling/home-design.css
@@ -2,190 +2,186 @@
     padding: 0;
     margin:0;
 }
+
+
+html{
+    font-family: cursive;
+
+
+}
+
+
 body{
-    background-image: url("/styling/Images/20230214_171837.jpg");
-    height: 100vh;
-    width: 100vw;
+    background-image: url("./Images/20230214_171837.jpg");
     background-size: cover;
-    background-position: top; /*woah, just learned that the background image for the page adapts to different screen sizes in different ways*/
-    background-attachment: fixed;
-    position: fixed;
-
-}
-.main{
-    width: 90%;
-       margin: auto;
-       
+    background-position: top ; /*woah, just learned that the background image for the page adapts to different screen sizes in different ways*/
+    background-repeat: no-repeat;
 }
 
-.header{
+main{
+    
+    height: 100%;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    padding: 20px 40px;
+     gap: 5rem;
+    
+
+}
+
+
+.main-content{
+    display: flex;
+    flex-direction: column;
+   justify-content: space-between;
+    gap: 1.5rem;
+   padding-inline-start: 0.5rem;
+    
+  
+}
+
+header{
+    padding: 20px 10px;
+   
     
 }
 
-.header h1{
+header h1{
     color:white;
+    text-align: left;
+    width: fit-content;
     text-transform: uppercase;
-    font-weight: 700;
-    font-family: cursive;
-    flex-basis: 20%;
+    font-weight: 600;
+  
+  
 }
 
-.header h1 strong{
-    font-size: 40px;
+
+header h1 strong{
+    font-size: 2.5rem;
     font-weight: 900;
     text-decoration: solid;
 }
 
-#nav-buttons {
-    display: flex;
-    
-}
-#nav-buttons a{
-    padding: 0px 20px;
-    text-decoration: none;
-    list-style-type: none;
-    color: white;
-    font-weight: 800;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   font-size: 25px;
-}  
 
-#nav-buttons a img{
-    height: 37px;
-}
 
-.bottom{
-       
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    bottom:40px;
-}
 
-.socials a {
-    display: block;
-    padding: 10px 0px;
-    
-}
-
-.socials a i{
-    scale: 2.5;
-    color: white;
-    padding-bottom: 30px;
-}
-
-.socials a i:hover{
-    scale:3.0;
-    
-}
-
-.socials{
-   position: fixed;
-     right: 0;
-    padding:0px 80px;
-}
-
-.header h1:hover{
-    scale: 1.5;
-  }
-
- 
-.header i{
-    display: none;
-}
-  .descriptions{
+.descriptions{
     color:white;
-    width: 100%;
+    
   }
 
   .descriptions h1  {
-    font-size: 70px;
+    font-size: 2rem
   }
 
-  .descriptions #IM{
+  .descriptions h2{
  font-weight: 600;
  font-size: 38px;
   }
 
+  .descriptions p{
+    font-size: 1.5rem;
+  }
+
   #talk{
     display: flex;
+    flex-direction: column;
 
   }
 
-  #talk button{
-    margin:10px;
-    margin-top: 20px;
-    padding: 8px 12px;
-    width:120px;
+  #talk .links{
+    display: flex;
+    gap: 1rem;
+  }
+
+  .links a{
+    margin-block: 20px;
+    padding: 20px 12px;
     background: transparent;
     color: white;
+    font-size: 1.2rem;
+    text-decoration: none;
     border: 3px solid white;
   }
-#talk p{
+
+  
+.links a:is(:hover,:focus-within){
+    transform: scale(1.05);
+    
+}
+
+
+  #talk p{
     margin-top: 20px;
-    padding-left: 10px;
+    width: 80%;
+}
+
+
+
+.socials{
+    display: flex;
+     justify-content: center;
+
+    gap: 1.5rem;
+}
+
+
+
+
+
+
+.socials a {
+   
+    padding: 10px 0px;
+    width: fit-content ;
+    font-size: 3rem;   
+    transition: all 0.3s;
+    color: white;
+    
+}
+
+.socials a :is(:hover,:focus-within){
+    transform: scale(1.4);
+    
+}
+
+
+@media screen and (min-width:400px){
+    
+  #talk p{
+    margin-top: 20px;
+    width: 90%;
+}
 }
   
-@media(max-width:850px){
-    .header h1{
-        margin-top: 20vh;/*This drops my name towards the center so that the UI dosen't look broken*/
-        transition: margin-top 2s;
-        position: absolute;
+@media screen and (min-width:768px) {
+
+
+    main{
+        gap: 10rem;
     }
     
-
+.main-content{
+    flex-direction: row;
+    padding-inline:2rem ;
     
-    .socials{
-        margin:none;
-        
-        position: relative;
-        /*The reason this is here is cos, those social media icons are sticking way too close to the description div when i'm going through different screen sizes, so I had to increase the margin  towards the left for larger screen sizes and leave it for smaller ones*/ 
-    }
-}
-
-@media(max-width:700px){
-.descriptions h1{
-    font-size:38px;
-}
-.header h1{
-    display: none;
-    /*I got rid of my name here, cos for smaller screen sizes, It would seem confusing to have my name all over the place*/
-}
-#talk{
-    display: block;
-}
-       
-.socials{
-   margin-top: 47%;
-   /*This is literally a band-aid solution, to a very funny problem*/
-   
-}
-/*I honestly wish that my bottom div would stay in one place, but I'm still a beginner and I don't want to have to start copying and pasting code from online sources in hope that it would work*/
-}
-#talk button:hover{
-    scale: 1.3;
-    cursor:pointer;
-
-}
-
-@media(max-width:700px){
       
-   
-      .header i{
-        display: contents;
-      }
-
-      .header #closeMenu{
-        color: white;
-        font-size: 90px;
-       text-align: center;
-          
-      }
-
-    
+  
 }
 
 
+header h1{
+    font-size: 2.5rem;
+}
+
+header h1 strong{
+    font-size: 4rem;
+}
+
+
+.socials{
+    flex-direction: column;
+}
+}
